force-app/main/default/objects/Ligne__c/fields/Trac_de_stellite__c.field-meta.xml
<CustomField>
    <fullName>Trac_de_stellite__c</fullName>
    <label>Tracé de stellite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>