force-app/main/default/objects/Ligne__c/fields/txtDents__c.field-meta.xml
<CustomField>
    <fullName>txtDents__c</fullName>
    <label>txtDents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>