force-app/main/default/objects/Ligne__c/fields/txtInlayCore__c.field-meta.xml
<CustomField>
    <fullName>txtInlayCore__c</fullName>
    <label>txtInlayCore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>