force-app/main/default/objects/Ligne__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>Case($RecordType.DeveloperName,&quot;Facette&quot;,&quot;Céramique monolithique (hors zircone)&quot;,&quot;Inlay_core_couronne&quot;,&quot;Classique&quot;,&quot;Inlay_onlay&quot;,&quot;Composite&quot;,&quot;Resine&quot;,&quot;Résine standard&quot;,&quot;Wax_up&quot;,&quot;Wax-up&quot;,&quot;ResineSansAffectation&quot;,&quot;Résine standard&quot;,&quot;Planification_implantaire&quot;,&quot;Simplifié (pilot drill)&quot;,&quot;&quot;)</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type</valueSetName>
    </valueSet>
</CustomField>