force-app/main/default/objects/Ligne__c/fields/Type_d_empreinte__c.field-meta.xml
<CustomField>
    <fullName>Type_d_empreinte__c</fullName>
    <label>Type d&apos;empreinte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physique</fullName>
            </value>
            <value>
                <fullName>Numérique (3SHAPE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>