force-app/main/default/objects/Ligne__c/fields/Type_d_empreinte_sur_implant__c.field-meta.xml
<CustomField>
    <fullName>Type_d_empreinte_sur_implant__c</fullName>
    <label>Type d’empreinte sur implant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>