force-app/main/default/objects/Ligne__c/fields/Type_de_couronne__c.field-meta.xml
<CustomField>
    <fullName>Type_de_couronne__c</fullName>
    <defaultValue>CASE( $RecordType.DeveloperName ,&quot;Planification_implantaire&quot;,&quot;Sans clavette&quot;,&quot;&quot;)</defaultValue>
    <label>Type de couronne</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scellée</fullName>
            </value>
            <value>
                <fullName>Transvissée</fullName>
            </value>
            <value>
                <fullName>Sans clavette</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>