force-app/main/default/objects/Ligne__c/fields/Type_de_pr_paration__c.field-meta.xml
<CustomField>
    <fullName>Type_de_pr_paration__c</fullName>
    <label>Type de préparation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_de_pr_paration</valueSetName>
    </valueSet>
</CustomField>