force-app/main/default/objects/Ligne__c/fields/Validee__c.field-meta.xml
<CustomField>
    <fullName>Validee__c</fullName>
    <formula>Ordonnance__r.Je_valide_cette_commande_pour_envoi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validee</label>
    <type>Checkbox</type>
</CustomField>