force-app/main/default/objects/Ligne__c/recordTypes/Attachements.recordType-meta.xml
<RecordType>
    <fullName>Attachements</fullName>
    <active>false</active>
    <label>Attachements</label>
</RecordType>