force-app/main/default/objects/Ligne__c/recordTypes/Couronne_sur_implants.recordType-meta.xml
<RecordType>
    <fullName>Couronne_sur_implants</fullName>
    <active>true</active>
    <description>N’oubliez pas de visser les analogues sur vos empreintes</description>
    <label>Couronne sur implants</label>
</RecordType>