force-app/main/default/objects/Ligne__c/recordTypes/Facette.recordType-meta.xml
<RecordType>
    <fullName>Facette</fullName>
    <active>true</active>
    <label>Facette</label>
</RecordType>