force-app/main/default/objects/Ligne__c/recordTypes/Gouttiere.recordType-meta.xml
<RecordType>
    <fullName>Gouttiere</fullName>
    <active>true</active>
    <label>Gouttière</label>
</RecordType>