force-app/main/default/objects/Ligne__c/recordTypes/Inlay_core_couronne.recordType-meta.xml
<RecordType>
    <fullName>Inlay_core_couronne</fullName>
    <active>true</active>
    <description>Lors d&apos;une empreinte physique d’inlay-core avec tenon calibré, utiliser un tenon métallique et joindre le tenon plastique correspondant au foret sur le bon de commande</description>
    <label>Inlay core couronne</label>
</RecordType>