force-app/main/default/objects/Ligne__c/recordTypes/Inlay_onlay.recordType-meta.xml
<RecordType>
    <fullName>Inlay_onlay</fullName>
    <active>true</active>
    <label>Inlay onlay</label>
</RecordType>