force-app/main/default/objects/Ligne__c/recordTypes/Ortho.recordType-meta.xml
<RecordType>
    <fullName>Ortho</fullName>
    <active>true</active>
    <label>Ortho</label>
</RecordType>