force-app/main/default/objects/Ligne__c/recordTypes/PEI_Cire.recordType-meta.xml
<RecordType>
    <fullName>PEI_Cire</fullName>
    <active>true</active>
    <label>Etape préliminaire (PEI, Cire, Guide, etc.)</label>
</RecordType>