force-app/main/default/objects/Ligne__c/recordTypes/Planification_implantaire.recordType-meta.xml
<RecordType>
    <fullName>Planification_implantaire</fullName>
    <active>true</active>
    <description>Après avoir enregistré la ligne, ne pas oublier de joindre le fichier CBCT à votre commande</description>
    <label>Planification implantaire (sur empreinte numérique)</label>
</RecordType>