force-app/main/default/objects/Ligne__c/recordTypes/Resine.recordType-meta.xml
<RecordType>
    <fullName>Resine</fullName>
    <active>true</active>
    <description>Remplacement des dents manquantes et des dents à extraire</description>
    <label>Résine avec extraction de dents</label>
</RecordType>