force-app/main/default/objects/Ligne__c/recordTypes/ResineSansAffectation.recordType-meta.xml
<RecordType>
    <fullName>ResineSansAffectation</fullName>
    <active>true</active>
    <description>Remplacement des dents manquantes UNIQUEMENT; Travail non garanti en cas d&apos;empreinte à l&apos;alginate</description>
    <label>Résine sans extraction de dents</label>
</RecordType>