force-app/main/default/objects/Ligne__c/recordTypes/Services.recordType-meta.xml
<RecordType>
    <fullName>Services</fullName>
    <active>true</active>
    <label>Réparations</label>
</RecordType>