force-app/main/default/objects/Ligne__c/recordTypes/Stellite.recordType-meta.xml
<RecordType>
    <fullName>Stellite</fullName>
    <active>true</active>
    <description>Remplacement des dents manquantes UNIQUEMENT; Travail non garanti en cas d&apos;empreinte à l&apos;alginate</description>
    <label>Stellite</label>
</RecordType>