force-app/main/default/objects/Ligne__c/recordTypes/Superstructure_et_barres.recordType-meta.xml
<RecordType>
    <fullName>Superstructure_et_barres</fullName>
    <active>true</active>
    <description>Pour ce type de prothèse, le laboratoire recommande de démarrer par un essayage esthétique et fonctionnel</description>
    <label>Suprastructure et barres</label>
</RecordType>