force-app/main/default/objects/Ligne__c/recordTypes/Wax_up.recordType-meta.xml
<RecordType>
    <fullName>Wax_up</fullName>
    <active>true</active>
    <label>Wax-up</label>
</RecordType>