force-app/main/default/objects/Ligne__c/validationRules/CheckArcades.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckArcades</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK(TEXT( Arcade__c )), OR( RecordType.DeveloperName =&quot;Gouttiere&quot;,RecordType.DeveloperName =&quot;PEI_Cire&quot;) )</errorConditionFormula>
    <errorDisplayField>Arcade__c</errorDisplayField>
    <errorMessage>Merci de préciser l&apos;arcade</errorMessage>
</ValidationRule>